# bilibili-cross

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/basic/: entities.dart
lib/ffi/: ffi.dart  ffi_methods.dart  video_quality.dart
lib/screens/: app_screen.dart  url_parse_screen.dart
lib/screens/components/: dialogs.dart  drawer_menu.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/android/: Cargo.toml  build.sh
rust/android/src/: lib.rs
rust/ios/: Cargo.toml  build.sh
rust/mac/: Cargo.toml  build_intel.sh
rust/main/: Cargo.toml
rust/main/src/: lib.rs  types.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
