[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
bilirust = { git = "https://github.com/niuhuan/bilirust.git", branch = "master" }
lazy_static = "1.4.0"
libc = "0.2.112"
serde = "1.0.132"
serde_json = "1.0.73"
tokio = "1.15.0"
openssl = { version = "0.10.36", features = ["vendored"] }

[lib]
